codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_bt.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 7777
expression: terminal.backend()
---
"                                                            "
"› /bt                                                       "
"                                                            "
"                                                            "
"  /btw  在临时分叉中开始旁路对话                            " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
