codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_pet.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 7723
expression: terminal.backend()
---
"                                                            "
"› /pet                                                      "
"                                                            "
"                                                            "
"  /pets  选择或隐藏终端宠物                                 " Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " ")]
