codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_res.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 7669
expression: terminal.backend()
---
"                                                            "
"› /res                                                      "
"                                                            "
"                                                            "
"                                                            "
"  /resume  恢复已保存的对话                                 " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " ")]
