codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_si.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 7831
expression: terminal.backend()
---
"                                                            "
"› /si                                                       "
"                                                            "
"                                                            "
"  /side  在临时分叉中开始旁路对话                           " Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " ")]
